Added mutual information and PyTable wrappers

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,5 @@
-[aliases]
-test = nosetests
-
 [nosetests]
-verbosity = 3
 detailed-errors = 1
+with-coverage = 1
+exe = 1
 cover-package = tagasses
