In this version:   * More runtime improvements   * More unit tests for probability estimates   * Minor changes in other places

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,9 +1,10 @@
-#Tue May 24 16:37:39 PDT 2011
+#Fri Jun 03 17:09:51 PDT 2011
 eclipse.preferences.version=1
 encoding//src/scripts/Baseline.py=utf8
 encoding//src/scripts/CreateGraph.py=utf8
 encoding//src/scripts/Filter.py=utf8
 encoding//src/scripts/ParseFile.py=utf8
+encoding//src/scripts/RankCorr.py=utf8
 encoding//src/scripts/Recommendations.py=utf8
 encoding//src/scripts/TagValues.py=utf8
 encoding//src/tagassess/common/ContiguousID.py=utf8
