--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Fri Jun 03 17:09:51 PDT 2011
+#Fri Jun 03 17:32:26 PDT 2011
 eclipse.preferences.version=1
 encoding//src/scripts/Baseline.py=utf8
+encoding//src/scripts/Baseline2.py=utf8
 encoding//src/scripts/CreateGraph.py=utf8
 encoding//src/scripts/Filter.py=utf8
 encoding//src/scripts/ParseFile.py=utf8
