--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,39 +1,12 @@
-#Sun Jul 03 18:34:05 PDT 2011
+#Mon Jul 18 15:35:06 PDT 2011
 eclipse.preferences.version=1
-encoding//src/scripts/Baseline.py=utf8
-encoding//src/scripts/Baseline2.py=utf8
-encoding//src/scripts/Baseline3.py=utf8
 encoding//src/scripts/CreateGraph.py=utf8
-encoding//src/scripts/Filter.py=utf8
-encoding//src/scripts/PagerankCorr.py=utf8
-encoding//src/scripts/ParseFile.py=utf8
-encoding//src/scripts/RankCorr.py=utf8
+encoding//src/scripts/GlobalGraphAndValues.py=utf8
 encoding//src/scripts/Recommendations.py=utf8
 encoding//src/scripts/TagValues.py=utf8
-encoding//src/tagassess/common/ContiguousID.py=utf8
-encoding//src/tagassess/common/test/test_ContiguousID.py=utf8
-encoding//src/tagassess/dao/base.py=utf8
-encoding//src/tagassess/dao/mongodb/annotations.py=utf8
-encoding//src/tagassess/dao/mongodb/test/test_annotations.py=utf8
-encoding//src/tagassess/dao/pytables/annotations.py=utf8
-encoding//src/tagassess/dao/pytables/test/test_annotations.py=utf8
-encoding//src/tagassess/data_parser.py=utf8
-encoding//src/tagassess/entropy.py=utf8
-encoding//src/tagassess/graph.py=utf8
-encoding//src/tagassess/index_creator.py=utf8
-encoding//src/tagassess/probability_estimates/ProbabilityEstimator.py=utf8
+encoding//src/scripts/UserFiles.py=utf8
 encoding//src/tagassess/probability_estimates/RWEstimator.py=utf8
 encoding//src/tagassess/probability_estimates/SmoothEstimator.py=utf8
-encoding//src/tagassess/probability_estimates/test/test_rw_estimator.py=utf8
-encoding//src/tagassess/probability_estimates/test/test_smooth_estimator.py=utf8
-encoding//src/tagassess/recommenders.py=utf8
-encoding//src/tagassess/smooth.py=utf8
-encoding//src/tagassess/test/test_data_parser.py=utf8
-encoding//src/tagassess/test/test_entropy.py=utf8
-encoding//src/tagassess/test/test_graph.py=utf8
-encoding//src/tagassess/test/test_index_creator.py=utf8
-encoding//src/tagassess/test/test_recommenders.py=utf8
+encoding//src/tagassess/smooth.pyx=utf8
 encoding//src/tagassess/test/test_smooth.py=utf8
-encoding//src/tagassess/test/test_value_calculator.py=utf8
 encoding//src/tagassess/value_calculator.py=utf8
-encoding//test/tagassess/common/test_ContiguousID.py=utf8
