--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,12 +1,14 @@
-#Mon Jul 18 15:35:06 PDT 2011
+#Mon Jul 18 17:04:22 PDT 2011
 eclipse.preferences.version=1
 encoding//src/scripts/CreateGraph.py=utf8
 encoding//src/scripts/GlobalGraphAndValues.py=utf8
 encoding//src/scripts/Recommendations.py=utf8
 encoding//src/scripts/TagValues.py=utf8
 encoding//src/scripts/UserFiles.py=utf8
+encoding//src/tagassess/probability_estimates/ProbabilityEstimator.py=utf8
 encoding//src/tagassess/probability_estimates/RWEstimator.py=utf8
 encoding//src/tagassess/probability_estimates/SmoothEstimator.py=utf8
+encoding//src/tagassess/recommenders.py=utf8
 encoding//src/tagassess/smooth.pyx=utf8
 encoding//src/tagassess/test/test_smooth.py=utf8
 encoding//src/tagassess/value_calculator.py=utf8
